--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html" id="logo">Gaming<span id="spanl"></span><span>Shop</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span><img src="img/menu.jpg" alt="" width="30px"></span>
+            <span><i class="fa-solid fa-bars"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
